--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -32,3 +32,8 @@ mat-form-field{
     margin: 0 50px 20px 50px;
   }
 }
+.ourButton{
+  background-color: gray;
+  padding: 6px 20px;
+  cursor: pointer;
+}
