--- a/frontend/src/app/dialog-test.html
+++ b/frontend/src/app/dialog-test.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Špatná hodnota!</h1>
 <div mat-dialog-content>
-  <p>Ve formuláři jste zadali špatnou hodnotu!</p>
+  <p>{{dialogService.message}}</p>
 </div>
 <div mat-dialog-actions>
   <button mat-raised-button color="primary" (click)="onNoClick()" class="ourButton">Ok</button>
